service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-petclinic-svc
spec:
  selector:
    app: spring-petclinic
  ports:
  - name: 80-8080
    protocol: TCP
    port: 80
    targetPort: 8080
